# promoter

./: .gitignore  README.md  run_app.sh  setup.sh
app/: main.py  pyproject.toml
app/artist/: __init__.py
promoter/: __init__.py  twitter.py
promoter/artist/: twitter.py
